--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,6 @@ jobs:
      
       - run:
           name: Clone private repo
+          command: |
             git clone https://Subhendu-droid :$GIT_TOKEN@github.com/Subhendu-droid/env-file-for-UB PR
             pwd
