--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,14 @@
-container:
-  image: openjdk:latest
-  cpu: 4
-  memory: 12G
+env:
+  TZ: Asia/KolKata
 
 task:
-  sudo apt update
+  name: "Ubuntu SSH"
+  timeout_in: 120m  
+  container:
+      image: ubuntu:latest
+      cpu: 8
+      memory: 32G
+  
+  Build-Env-Setup_script:
+       - sudo apt install neofetch
+       - neofetch 
