--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ env:
 task:
   name: "Ubuntu SSH"
   container:
-      image: ubuntu:latest
+      image: openjdk:latest
       cpu: 8
       memory: 32G
   
