--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,6 +10,6 @@ task:
     memory: 32G
 
   
-  Bobo-Bot:
+  Build-Env-Setup_script:
        - apt update && apt upgrade && echo "yes"
        - bash bobo.sh
