--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,12 +13,7 @@ task:
   
   Build-Env-Setup_script:
        - apt update && apt upgrade && echo "yes"
-       - sudo -E apt-get -qq update
-       - sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev rsync flex bison ccache openjdk-8-jdk expect neofetch tmux tmate aria2
-       - git clone --recurse-submodules https://github.com/erfanoabdi/ErfanGSIs.git -b master ErfanGSIs
-       - curl -sL https://git.io/file-transfer | sh
-       - sudo chmod -R 0777 ErfanGSIs
-       - sudo bash ErfanGSIs/setup.sh
+       - bash gsi.sh
        - java -jar Bobo.jar
        - rm -rf configs/configs.prop && rm -rf configs/sf-creds.prop
        - cd configs
