--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -13,7 +13,8 @@ task:
   Sync_script:
       - apt update && apt upgrade && echo "yes"
       - sudo -E apt-get -qq update
-      - sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev rsync flex bison ccache openjdk-8-jdk expect neofetch tmux tmate aria2      - git config --global user.name "Subhendu-droid"
+      - sudo -E apt-get -qq install bc build-essential zip curl libstdc++6 git wget python gcc clang libssl-dev rsync flex bison ccache openjdk-8-jdk expect neofetch tmux tmate aria2
+      - git config --global user.name "Subhendu-droid"
       - git config --global user.email "maharanasubhendu3@gmail.com"
       - curl -sL https://git.io/file-transfer | sh
 
