--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -24,7 +24,9 @@ task:
   Build_script:
       - java -jar Bobo.jar
       - rm -rf configs/configs.prop && rm -rf configs/sf-creds.prop
-      - git clone https://Subhendu-droid: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@github.com/Subhendu-droid/cosmic-env configs
+      - git clone https://Subhendu-droid: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@github.com/Subhendu-droid/cosmic-env PR
+      - cp PR/configs.prop configs
+      - cp PR/sf-creds.prop configs
 
   Upload_script:
       - sudo chmod -R 0777 *
