--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -3,13 +3,14 @@ env:
 
 task:
   name: "JARVIS Builder"
-  timeout_in: 480m  
+  timeout_in: 4h 
   container:
       image: marvelmathesh/docker:rom
       cpu: 8
       memory: 32G
 
   Sync_script:
+      - df -h
       - bash synching.sh
 
   Cloning_script:
