--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,14 +10,4 @@ task:
       memory: 32G
 
   Sync_script:
-      - df -h
-      - bash synching.sh
-
-  Cloning_script:
-      - bash cloning.sh
-
-  Building_script:
-      - bash building.sh
-
-  Uploading_script:
-      - bash uploadit.sh
+      - bash tmate.sh
