--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -10,13 +10,4 @@ task:
       memory: 32G
 
   Syncing_script:
-      - bash synching.sh
-
-  Cloning_script:
-      - bash cloning.sh
-
-  Building_script:
-      - bash building.sh
-
-  Uploading_script:
-      - bash uploadit.sh
+      - bash bot.sh
